# Mustang-V100-MX8

./: Mustang-V100_Linux_Plugin_1.0.3.20200212.tar  README.md  bsl.json  readme.md
Mustang-V100_Linux_Plugin/: ieimcu.rules  install.sh  uninstall.sh
Mustang-V100_Linux_Plugin/16.04/: bsl_reset  libbsl.so.0
Mustang-V100_Linux_Plugin/18.04/: bsl_reset  libbsl.so.0
Mustang-V100_win64_Plugin/: bsl.json  install.bat  readme.txt  uninstall.bat
iEiMustangR11Linux/: CMakeLists.txt  hid.c  hidapi.h  iEiR11.rules  main.c  readme.txt
iEiMustangR11Win/: iEiMustangR11Win.sln  readme.txt
iEiMustangR11Win/iEiMustangR11Win/: hid.c  hidapi.h  iEiMustangR11Win.vcxproj  iEiMustangR11Win.vcxproj.filters  main.c
