cmake_minimum_required(VERSION 3.0)
set (TARGET_NAME iEiMustangR11Reset)
project(${TARGET_NAME})
#set(${TARGET_NAME}_VERSION "1.0.0.1")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
#find_path(LIBUSB_INCLUDE_DIR NAMES libusb.h PATH_SUFFIXES "include" "libusb" "libusb-1.0")
#message(STATUS "LIBUSB=${LIBUSB_INCLUDE_DIR}")
#find_library(LIBUSB_LIBRARY NAMES usb-1.0 PATHS /usr/lib )
#message(STATUS "libusblib =${LIBUSB_LIBRARY}")
#include_directories(LIBUSB_INCLUDE_DIR)
link_directories(/usr/lib)

aux_source_directory(./ HEADER_FILES)
aux_source_directory(./ SRC_FILES)

add_executable(${TARGET_NAME} ${HEADER_FILES} ${SRC_FILES})
target_include_directories(${TARGET_NAME} PUBLIC ${LIBUSB_INCLUDE_DIR})
#target_link_libraries(${TARGET_NAME} ${LIBUSB_LIBRARY}  libdl.so pthread)
target_link_libraries(${TARGET_NAME} udev libdl.so pthread)